<resources>
    <string name="app_name">HungryBirds</string>
    <string name="connexionPageMessage">Page de connexion</string>
    <string name="inscriptionPageMessage">Formulaire d\'inscription</string>
    <string name="passwordForgotten">Mot de passe oublié</string>
    <string name="send">Envoyer</string>
    <string name="placeholderName">Nom</string>
    <string name="placeholderFirstname">Prénom</string>
    <string name="placeholderMail">Adresse mail</string>
    <string name="placeholderPassword">Mot de passe</string>
    <string name="placeholderPhonenumber">Téléphone</string>
    <string name="placeholderAddress">Adresse</string>
    <string name="placeholderTown">Ville</string>
    <string name="placeholderPostalCode">Code Postal</string>
    <string name="placeholderStructureName">Nom de la structure</string>
    <string name="placeholderSiret">N° Siret</string>
    <string name="placeholderDescription">Nom de la structure</string>
    <string name="buttonConnexion">Se connecter</string>
    <string name="buttonRegister">S\'inscrire</string>
    <string name="buttonNoRegister">Continuer sans se connecter</string>
    <string name="buttonReturn">Retour</string>
    <string name="setMessage"> </string>
    <string name="userIdSavedKey">UserId</string>
    <string name="statusSavedKey">Statut</string>
    <string name="connectedSavedKey">Connected</string>
    <string name="timeDestructionSavedKey">TimeDestruction</string>
    <string name="dialogTypeActivity">Quel type de compte souhaitez vous créer ?</string>
    <string name="client">Client</string>
    <string name="association">Association</string>
    <string name="vendeur">Vendeur</string>
    <string name="userAltered">Vos informations ont étés modifiées</string>
    <string name="createClientAccount">Création d\'un compte client :</string>
    <string name="createAssocAccount">Création d\'un compte d\'association :</string>
    <string name="createVendeurAccount">Création d\'un compte vendeur :</string>
    <string name="infoAlreadyUsed">L\'adresse mail et/ou le numéro de téléphone sont déjà utilisés.</string>
    <string name="incorrectMailFormat">Le format de l\'email est incorrect, veuillez le modifier !</string>
    <string name="emptyField">L\'un des deux champs est vide, veuillez le renseigner !</string>
    <string name="numberTries">Nombre d\'essais restants : </string>
    <string name="accountCreated">Votre compte a bien été créé, vous allez être redirigé automatiquement.</string>
    <string name="accountBlocked">Votre compte est bloqué, veuillez contacter un administrateur.</string>
    <string name="siretAlreadyUsed">Le numéro de SIRET est déjà utilisé.</string>
    <string name="incorrectSiretNumber">Le numéro de SIRET n\'existe pas dans la base de données nationale.</string>
    <string name="accountsGes">Gestion des comptes</string>
    <string name="accountGes">Gestion de votre compte</string>
    <string name="accountsStruct">Gestion des structures</string>
    <string name="structure">Struc.</string>
    <string name="accountStruct">Gestion de votre structure</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Accueil</string>
    <string name="title_user">Compte</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_disconnect">Quitter</string>
    <string name="addStructure">Créer une stucture</string>
    <string name="createStructure">Ajouter/Modifier une structure</string>
    <string-array name="array_role">
        <item>Client</item>
        <item>Association</item>
        <item>Vendeur</item>
    </string-array>
</resources>